Article styling fixed

--- a/package/stylesheets/tako.theme.css
+++ b/package/stylesheets/tako.theme.css
@@ -1,6 +1,12 @@
 /* TaKo v0.1.0 - 1/21/2014
    http://
    Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v0.1.0 - 1/21/2014
+   http://
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
+/* TaKo v0.1.0 - 1/21/2014
+   http://
+   Copyright (c) 2014 Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85) - Under MIT License */
 body{font:14px "lato";background-color:#e7e7e7;}
 body *{font-family:"lato"}
 .theme{background-color:#ff7d26 !important}
