--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -61,7 +61,7 @@ div[data-element="aside_background"]
   &.hide
     background-color rgba(0, 0, 0, 0)
 
-.indented > div
+.indented > *
   padding INDENT
 
 .anchor
