--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -10,7 +10,7 @@ aside .counter{margin-top:-3px;-webkit-border-radius:2px;-moz-border-radius:2px;
 div[data-element="aside_background"]{position:fixed;top:50px;left:0;width:100%;height:100%;-webkit-transition:background-color 150ms linear;-moz-transition:background-color 150ms linear;-ms-transition:background-color 150ms linear;-o-transition:background-color 150ms linear;transition:background-color 150ms linear;z-index:0;background-color:rgba(0,0,0,0);}
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
 div[data-element="aside_background"].hide{background-color:rgba(0,0,0,0)}
-.indented > div{padding:.8em}
+.indented > *{padding:.8em}
 .anchor{width:100% !important}
 .smallest{font-size:11px}
 .small{font-size:.9em}
@@ -68,8 +68,8 @@ footer nav{margin:0;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-fle
 footer nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:65px;}
 footer nav > * > *{line-height:65px;height:65px}
 footer nav > *.active{background-color:rgba(250,250,250,0.15)}
-article{max-width:100%;width:auto;display:none;margin:0;position:absolute;top:50px;overflow:visible;z-index:99;}
-article.horzontal{max-width:auto;min-width:100%}
+article{width:100%;display:none;margin:0;position:absolute;top:50px;overflow:visible;z-index:99;}
+article.horizontal{width:auto;min-width:100%}
 article.active{display:block}
 
 article ul{list-style:none;width:100%;padding:0;margin:0;}
