--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -157,8 +157,7 @@ footer
         background-color rgba(250,250,250,0.15)
 
 article
-  max-width 100%
-  width auto
+  width 100%
   display none
   margin 0
   position absolute
@@ -166,8 +165,8 @@ article
   overflow visible
   z-index ARTICLE_INDEX
 
-  &.horzontal
-    max-width auto
+  &.horizontal
+    width auto
     min-width 100%
 
   &.active
