--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -9,7 +9,7 @@ article ul
     position relative
     background-color white
     border-bottom 1px solid rgba(0, 0, 0, 0.1)
-    padding 8px 10px 8px 10px
+    padding .9em
 
     &.separator
       background-color rgba(0, 0, 0, 0.1)
