--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -24,6 +24,17 @@ article ul
       overflow hidden
       white-space nowrap
       display block
+
+    & small
+      margin-top .2em
+
+    & > img
+      width 40px
+      height 40px
+      display inline
+      float left
+      margin-right .9em
+
     & input
       &[type="radio"], &[type="checkbox"]
         &.onright
