--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -35,6 +35,14 @@ article ul
       float left
       margin-right .9em
 
+      &.big
+        width 70px
+        height 70px
+        margin-right .7em
+        margin-left -.9em
+        margin-top -.9em
+        margin-bottom -.9em
+
     & input
       &[type="radio"], &[type="checkbox"]
         &.onright
