--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -80,6 +80,7 @@ header
     padding-top 0
 
   & button, &.button
+    min-width HEADER_HEIGHT - 4
     text-indent 0
     display inline-block
     font-weight bold
