--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -16,6 +16,14 @@ article ul
       color white
       padding 1px 10px 1px 10px
 
+    &.icon:before
+      display inline-block
+      float left
+      margin-right .3em
+      line-height 40px
+      width 40px
+      height 40px
+      font-size 3em
 
     &:first-child
       border-top 1px solid rgba(0, 0, 0, 0.1)
