li:active only on tapable li

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -231,6 +231,6 @@ label.select
     & > select
       border-color lighten(THEME, 30%)
 
-li:active
+li.tapable:active
   color TEXT
   background-color lighten(THEME, 20%)
