Added small image to lists

--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -28,14 +28,16 @@ FONT_SIZE_NORMAL                = 1.0em
 FONT_SIZE_BIG                   = 1.2em
 FONT_SIZE_BIGGEST               = 1.4em
 
-// LIST_IMAGE                   = 44px
-// LIST_BIG_IMAGE               = 65px
-// LIST_SMALL_IMAGE             = 24px
+LIST_IMAGE                      = 40px
+LIST_BIG_IMAGE                  = 70px
+LIST_SMALL_IMAGE                = 30px
 
 INDENT                          = 0.8em
 NOTIFICATION_INDENT             = 2em
 
 COLUMN                          = 10%
+
+
 
 /* Z-INDEXES */
 ARTICLE_INDEX                   = 99
