--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -37,19 +37,26 @@ article ul
       margin-top .2em
 
     & > img
-      width 40px
-      height 40px
+      width LIST_IMAGE
+      height LIST_IMAGE
       display inline
       float left
       margin-right .9em
 
       &.big
-        width 70px
-        height 70px
+        width LIST_BIG_IMAGE
+        height LIST_BIG_IMAGE
         margin-right .7em
         margin-left -.9em
         margin-top -.9em
         margin-bottom -.9em
+
+
+      &.small
+        width LIST_SMALL_IMAGE
+        height LIST_SMALL_IMAGE
+        margin-right 1.1em
+        margin-top .4em
 
     & input
       &[type="radio"], &[type="checkbox"]
