--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -37,7 +37,9 @@ NOTIFICATION_INDENT             = 2em
 
 COLUMN                          = 10%
 
-
+PULL_HEIGHT                     = 60px
+PULL_PADDING                    = 5px
+PULL_BORDER                     = 3px
 
 /* Z-INDEXES */
 ARTICLE_INDEX                   = 99
