--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -234,3 +234,6 @@ label.select
 li.tapable:active
   color TEXT
   background-color lighten(THEME, 20%)
+
+div.pulltorefresh
+  background-color darken(BACKGROUND, 15%)
