Fixings for pull and refresh in android

--- a/stylesheets/Tako.pullrefresh.styl
+++ b/stylesheets/Tako.pullrefresh.styl
@@ -8,7 +8,8 @@ div.pulltorefresh
   line-height PULL_HEIGHT
   border-top 1px solid rgba(0, 0, 0, 0.1)
   border-bottom 1px solid rgba(0, 0, 0, 0.6)
-  padding PULL_PADDING
+  padding-top PULL_PADDING
+  padding-bottom PULL_PADDING
   text-align center
   transform(translate(0,- INITIAL_POS))
   margin-bottom - INITIAL_POS
