Pull and refresh working

--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -37,7 +37,8 @@ NOTIFICATION_INDENT             = 2em
 
 COLUMN                          = 10%
 
-PULL_HEIGHT                     = 60px
+PULL_HEIGHT                     = 500px
+PULL_CONTENT                    = 60px
 PULL_PADDING                    = 5px
 PULL_BORDER                     = 3px
 
