--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -226,10 +226,12 @@ footer .icon:before{font-size:1.4em}
 footer button{height:inherit;width:100%;-webkit-background-image:none;-moz-background-image:none;-ms-background-image:none;-o-background-image:none;background-image:none;background-color:rgba(0,0,0,0);}
 footer button .counter{position:relative;top:-1.2000000000000002em;line-height:15px;-webkit-border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;padding:.2em .5em .2em .5em;font-size:.9em}
 
-div.pulltorefresh{height:60px;width:100%;line-height:60px;border-top:1px solid rgba(0,0,0,0.1);border-bottom:1px solid rgba(0,0,0,0.6);padding-top:5px;padding-bottom:5px;text-align:center;-webkit-transform:translate(0,-72px);-moz-transform:translate(0,-72px);-ms-transform:translate(0,-72px);-o-transform:translate(0,-72px);transform:translate(0,-72px);margin-bottom:-72px;}
+div.pulltorefresh{width:100%;line-height:60px;border-top:1px solid rgba(0,0,0,0.1);border-bottom:1px solid rgba(0,0,0,0.6);padding-top:440px;padding-bottom:5px;text-align:center;-webkit-transition:-webkit-transform 0;-moz-transition:-webkit-transform 0;-ms-transition:-webkit-transform 0;-o-transition:-webkit-transform 0;transition:-webkit-transform 0;-webkit-transform:translate(0,-511px);-moz-transform:translate(0,-511px);-ms-transform:translate(0,-511px);-o-transform:translate(0,-511px);transform:translate(0,-511px);margin-bottom:-511px;}
 div.pulltorefresh span{height:50px;line-height:50px;display:inline-block;}
 div.pulltorefresh span.text{font-size:1.5em}
-div.pulltorefresh span.icon{width:50px;-webkit-border-radius:28px;-moz-border-radius:28px;-ms-border-radius:28px;-o-border-radius:28px;border-radius:28px;border:3px solid rgba(0,0,0,0.8);text-align:center;padding:0;margin-right:1em;font-size:2em}
+div.pulltorefresh span.icon{width:50px;-webkit-border-radius:28px;-moz-border-radius:28px;-ms-border-radius:28px;-o-border-radius:28px;border-radius:28px;border:3px solid rgba(0,0,0,0.8);text-align:center;padding:0;margin-right:1em;font-size:2em;}
+div.pulltorefresh span.icon.animated{border:none;font-size:3em;margin-right:.5em;margin-top:10px;}
+div.pulltorefresh span.icon.animated+span.text{position:relative;top:-7px}
 
 div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-top:0;}
 div[data-element="notification"].show{display:block}
