--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -83,6 +83,9 @@ div[data-element="notification"]
       float left
       margin-right 0.2em
 
+    &.loading .icon
+      font-size 4em!important
+
     &:not(.progress) .icon
       line-height 80px
 
