--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -150,8 +150,8 @@ div[data-element="notification"] > div.window
     & .icon
       color FAIL
 
-#circular3dG > div
-  background-color THEME
+[data-element=notification] .loading .icon
+  color THEME
 
 .progress_bar
   background-color lighten(SECONDARY, 30%)
