--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -171,27 +171,6 @@ label.select select{width:100%}
 .box_8{-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
 .box_9{-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
 
-#circular3dG{position:relative;height:64px}
-.circular3dG{position:absolute;background-color:#000;width:6.4px;height:6.4px;-webkit-border-radius:3.2px;-moz-border-radius:3.2px;-ms-border-radius:3.2px;-o-border-radius:3.2px;border-radius:3.2px;-webkit-animation-name:bounce_circular3dG;-moz-animation-name:bounce_circular3dG;-ms-animation-name:bounce_circular3dG;-o-animation-name:bounce_circular3dG;animation-name:bounce_circular3dG;-webkit-animation-duration:.7999999999999999s;-moz-animation-duration:.7999999999999999s;-ms-animation-duration:.7999999999999999s;-o-animation-duration:.7999999999999999s;animation-duration:.7999999999999999s;-webkit-animation-iteration-count:infinite;-moz-animation-iteration-count:infinite;-ms-animation-iteration-count:infinite;-o-animation-iteration-count:infinite;animation-iteration-count:infinite;-webkit-animation-direction:linear;-moz-animation-direction:linear;-ms-animation-direction:linear;-o-animation-direction:linear;animation-direction:linear}
-#circular3d_1G{left:33px;top:4px;-webkit-animation-delay:.3s;-moz-animation-delay:.3s;-ms-animation-delay:.3s;-o-animation-delay:.3s;animation-delay:.3s}
-#circular3d_2G{left:46px;top:15px;-webkit-animation-delay:.39999999999999997s;-moz-animation-delay:.39999999999999997s;-ms-animation-delay:.39999999999999997s;-o-animation-delay:.39999999999999997s;animation-delay:.39999999999999997s}
-#circular3d_3G{left:54px;top:29px;-webkit-animation-delay:.5s;-moz-animation-delay:.5s;-ms-animation-delay:.5s;-o-animation-delay:.5s;animation-delay:.5s}
-#circular3d_4G{left:51px;top:43px;-webkit-animation-delay:.6s;-moz-animation-delay:.6s;-ms-animation-delay:.6s;-o-animation-delay:.6s;animation-delay:.6s}
-#circular3d_5G{left:34px;top:47px;-webkit-animation-delay:.7s;-moz-animation-delay:.7s;-ms-animation-delay:.7s;-o-animation-delay:.7s;animation-delay:.7s}
-#circular3d_6G{left:12px;top:31px;-webkit-animation-delay:.7999999999999999s;-moz-animation-delay:.7999999999999999s;-ms-animation-delay:.7999999999999999s;-o-animation-delay:.7999999999999999s;animation-delay:.7999999999999999s}
-#circular3d_7G{left:7px;top:9px;-webkit-animation-delay:.8999999999999999s;-moz-animation-delay:.8999999999999999s;-ms-animation-delay:.8999999999999999s;-o-animation-delay:.8999999999999999s;animation-delay:.8999999999999999s}
-#circular3d_8G{left:18px;top:0;-webkit-animation-delay:1s;-moz-animation-delay:1s;-ms-animation-delay:1s;-o-animation-delay:1s;animation-delay:1s}
-@-moz-keyframes bounce_circular3dG{0%{-webkit-transform:scale(2.6);-moz-transform:scale(2.6);-ms-transform:scale(2.6);-o-transform:scale(2.6);transform:scale(2.6)}
-100%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@-webkit-keyframes bounce_circular3dG{0%{-webkit-transform:scale(2.6);-moz-transform:scale(2.6);-ms-transform:scale(2.6);-o-transform:scale(2.6);transform:scale(2.6)}
-100%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@-o-keyframes bounce_circular3dG{0%{-webkit-transform:scale(2.6);-moz-transform:scale(2.6);-ms-transform:scale(2.6);-o-transform:scale(2.6);transform:scale(2.6)}
-100%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@-ms-keyframes bounce_circular3dG{0%{-webkit-transform:scale(2.6);-moz-transform:scale(2.6);-ms-transform:scale(2.6);-o-transform:scale(2.6);transform:scale(2.6)}
-100%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@keyframes bounce_circular3dG{0%{-webkit-transform:scale(2.6);-moz-transform:scale(2.6);-ms-transform:scale(2.6);-o-transform:scale(2.6);transform:scale(2.6)}
-100%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}
 button,.button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:2.5em;text-decoration:none;text-align:center;padding-left:1em;padding-right:1em;}
 button.smallest,.button.smallest{line-height:2em;padding:0 .6em;}
 button.smallest>img,.button.smallest>img{height:1.3em;top:3px;}
@@ -250,6 +229,7 @@ div[data-element="notification"] > div.window.confirm *{font-size:1.1em}
 div[data-element="notification"] > div.window.confirm .accept{float:left;width:48.5%}
 div[data-element="notification"] > div.window.confirm .cancel{float:right;width:48.5%}
 div[data-element="notification"] > div.window .icon{display:block;text-align:center;height:100%;width:80px;font-size:3em;float:left;margin-right:.2em}
+div[data-element="notification"] > div.window.loading .icon{font-size:4em !important}
 div[data-element="notification"] > div.window:not(.progress) .icon{line-height:80px}
 div[data-element="notification"] > div.window.show{opacity:1}
 div[data-element="notification"] > div.window.success,div[data-element="notification"] > div.window.error{border-style:solid;border-width:0 0 0 4px;min-width:280px;}
