--- a/package/stylesheets/tako.theme.css
+++ b/package/stylesheets/tako.theme.css
@@ -29,7 +29,7 @@ div[data-element="notification"] > div.window.success{border-color:#199c12;}
 div[data-element="notification"] > div.window.success .icon{color:#199c12}
 div[data-element="notification"] > div.window.error{border-color:#ed1c13;}
 div[data-element="notification"] > div.window.error .icon{color:#ed1c13}
-#circular3dG > div{background-color:#f60}
+[data-element=notification] .loading .icon{color:#f60}
 .progress_bar{background-color:#6d6d6d;}
 .progress_bar .percent{background-color:#f60}
 input[type="radio"].circle,input[type="checkbox"].circle,input[type="radio"].square,input[type="checkbox"].square,input[type="radio"].switch,input[type="checkbox"].switch{border-color:#adadad;background-color:#dbdbdb;-webkit-box-shadow:inset 0 0 8px #adadad;-moz-box-shadow:inset 0 0 8px #adadad;-ms-box-shadow:inset 0 0 8px #adadad;-o-box-shadow:inset 0 0 8px #adadad;box-shadow:inset 0 0 8px #adadad}
