Added aside full mode

--- a/stylesheets/TaKo.constants.styl
+++ b/stylesheets/TaKo.constants.styl
@@ -52,5 +52,6 @@ HEADER_NAV_INDEX                = 103
 
 ASIDE_BCK_INDEX                 = 200
 ASIDE_INDEX                     = 201
+FULL_ASIDE_INDEX                = 50
 
 NOTIFICATION_INDEX              = 400
