--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -38,6 +38,9 @@ body
   & *
     font-family FONT_FAMILY
 
+section
+  background-color BACKGROUND
+
 .theme
   background-color lighten(THEME, 15%)!important
 
