Fixed aside for android

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -9,6 +9,8 @@ button, .button
   text-align center
   padding-left 1em
   padding-right 1em
+  overflow hidden
+  white-space nowrap
 
   &.smallest
     line-height 2em
