--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -144,6 +144,12 @@ footer
   box-pack justify
   box-align stretch
 
+  &.asided
+    left ASIDE_WIDTH + ASIDE_PADDING * 2 !important
+
+    & nav
+      left ASIDE_WIDTH + ASIDE_PADDING * 2 !important
+
   & nav
     margin 0
     box-flex 1
