Added shadow to aside

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -90,6 +90,7 @@ article
 aside
   background-color SECONDARY
   color SECONDARY_TEXT !important
+  box-shadow(4px 0 3px 1px darken(SECONDARY, 50%))
 
   & .counter
     background-color lighten(SECONDARY, 30%)
