--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -185,6 +185,8 @@ label.select select{width:100%}
 .box_9{-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
 
 button,.button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:2.5em;text-decoration:none;text-align:center;padding-left:1em;padding-right:1em;overflow:hidden;white-space:nowrap;}
+button:hover,.button:hover{-webkit-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;-moz-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;-ms-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;-o-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important}
+button:active,.button:active{-webkit-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;-moz-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;-ms-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;-o-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important}
 button.smallest,.button.smallest{line-height:2em;padding:0 .6em;}
 button.smallest>img,.button.smallest>img{height:1.3em;top:3px;}
 button.smallest>img+span,.button.smallest>img+span{font-size:11px}
