--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -12,6 +12,12 @@ button, .button
   overflow hidden
   white-space nowrap
 
+  &:hover
+    box-shadow inset 0 0 5em rgba(0,0,0,0.1), inset 0 1px rgba(0,0,0,0.1)!important
+
+  &:active
+    box-shadow inset 0 0 5em rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2)!important
+
   &.smallest
     line-height 2em
     padding 0 .6em
