Improved centered notifications, maybe use flexbox

--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -57,7 +57,9 @@ div[data-element="notification"]
     &.center
       text-align center
       padding 1.8em
-      margin-top 50%
+      position absolute
+      top 35%
+      left 50%
 
     &.confirm
       max-width 800px
