Notifications to flexbox

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -135,7 +135,7 @@ aside li, footer button
   &:active, &:hover
     background-color SECONDARY_ACTIVE
 
-div[data-element="notification"] > div.window
+div[data-element="notification"] > div > div.window
   background-color rgba(0,0,0,0.8)
 
   & *
