--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -228,32 +228,34 @@ div.pulltorefresh span.icon.animated{border:none;font-size:3em;margin-right:.5em
 
 div[data-element="notification"]{position:fixed;top:0;bottom:0;left:0;right:0;display:none;background-color:rgba(0,0,0,0.6);z-index:400;padding-top:0;}
 div[data-element="notification"].show{display:block}
-div[data-element="notification"] > div.window{color:rgba(0,0,0,0.8);margin-left:auto;margin-right:auto;opacity:0;max-width:450px;width:90%;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms;}
-div[data-element="notification"] > div.window:after{display:block;content:"";clear:both}
-div[data-element="notification"] > div.window.top_position{margin-top:620px;}
-div[data-element="notification"] > div.window.top_position.downwards{margin-top:-570px}
-div[data-element="notification"] > div.window.top_position.margin{margin-top:670px}
-div[data-element="notification"] > div.window.top_position.no_margin{margin-top:570px}
-div[data-element="notification"] > div.window.upwards.show{-webkit-transform:translate(0,-570px);-moz-transform:translate(0,-570px);-ms-transform:translate(0,-570px);-o-transform:translate(0,-570px);transform:translate(0,-570px)}
-div[data-element="notification"] > div.window.downwards.show{-webkit-transform:translate(0,570px);-moz-transform:translate(0,570px);-ms-transform:translate(0,570px);-o-transform:translate(0,570px);transform:translate(0,570px)}
-div[data-element="notification"] > div.window.left *{display:block;text-align:left}
-div[data-element="notification"] > div.window.left > *{display:block}
-div[data-element="notification"] > div.window.center{text-align:center;padding:1.8em;position:absolute;top:35%;left:50%}
-div[data-element="notification"] > div.window.confirm{max-width:800px;padding:1.8em;}
-div[data-element="notification"] > div.window.confirm *{font-size:1.1em}
-div[data-element="notification"] > div.window.confirm .accept{float:left;width:48.5%}
-div[data-element="notification"] > div.window.confirm .cancel{float:right;width:48.5%}
-div[data-element="notification"] > div.window .icon{display:block;text-align:center;height:100%;width:80px;font-size:3em;float:left;margin-right:.2em}
-div[data-element="notification"] > div.window.loading .icon{font-size:4em !important}
-div[data-element="notification"] > div.window:not(.progress) .icon{line-height:80px}
-div[data-element="notification"] > div.window.show{opacity:1}
-div[data-element="notification"] > div.window.success,div[data-element="notification"] > div.window.error{border-style:solid;border-width:0 0 0 4px;min-width:280px;}
-div[data-element="notification"] > div.window.success .title,div[data-element="notification"] > div.window.error .title{padding-top:.3em}
-div[data-element="notification"] > div.window.progress,div[data-element="notification"] > div.window.loading{width:80%;}
-div[data-element="notification"] > div.window.progress .icon,div[data-element="notification"] > div.window.loading .icon{width:100%}
-div[data-element="notification"] > div.window .title{line-height:40px;font-size:1.2em}
-div[data-element="notification"] > div.window .content{padding-top:.5em}
-div[data-element="notification"] > div.window #circular_container{width:64px;margin:0 auto 0 auto}
+div[data-element="notification"] > div{margin:0;padding:0;width:100%;height:100%;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;width:100%;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;-o-box-align:center;box-align:center}
+div[data-element="notification"] > div > div.window{color:rgba(0,0,0,0.8);margin-left:auto;margin-right:auto;opacity:0;max-width:450px;width:90%;-webkit-transition-duration:500ms;-moz-transition-duration:500ms;-ms-transition-duration:500ms;-o-transition-duration:500ms;transition-duration:500ms;}
+div[data-element="notification"] > div > div.window:after{display:block;content:"";clear:both}
+div[data-element="notification"] > div > div.window.top_position{margin-top:620px;}
+div[data-element="notification"] > div > div.window.top_position.downwards{margin-top:-570px}
+div[data-element="notification"] > div > div.window.top_position.margin{margin-top:670px}
+div[data-element="notification"] > div > div.window.top_position.no_margin{margin-top:570px}
+div[data-element="notification"] > div > div.window.upwards.show{-webkit-transform:translate(0,-570px);-moz-transform:translate(0,-570px);-ms-transform:translate(0,-570px);-o-transform:translate(0,-570px);transform:translate(0,-570px)}
+div[data-element="notification"] > div > div.window.downwards.show{-webkit-transform:translate(0,570px);-moz-transform:translate(0,570px);-ms-transform:translate(0,570px);-o-transform:translate(0,570px);transform:translate(0,570px)}
+div[data-element="notification"] > div > div.window.left *{display:block;text-align:left}
+div[data-element="notification"] > div > div.window.left > *{display:block}
+div[data-element="notification"] > div > div.window:not(.center){-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0}
+div[data-element="notification"] > div > div.window.center{text-align:center;padding:1.8em;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;max-height:125px;position:relative;top:-10%}
+div[data-element="notification"] > div > div.window.confirm{max-width:800px;padding:1.8em;}
+div[data-element="notification"] > div > div.window.confirm *{font-size:1.1em}
+div[data-element="notification"] > div > div.window.confirm .accept{float:left;width:48.5%}
+div[data-element="notification"] > div > div.window.confirm .cancel{float:right;width:48.5%}
+div[data-element="notification"] > div > div.window .icon{display:block;text-align:center;height:100%;width:80px;font-size:3em;float:left;margin-right:.2em}
+div[data-element="notification"] > div > div.window.loading .icon{font-size:4em !important}
+div[data-element="notification"] > div > div.window:not(.progress) .icon{line-height:80px}
+div[data-element="notification"] > div > div.window.show{opacity:1}
+div[data-element="notification"] > div > div.window.success,div[data-element="notification"] > div > div.window.error{border-style:solid;border-width:0 0 0 4px;min-width:280px;}
+div[data-element="notification"] > div > div.window.success .title,div[data-element="notification"] > div > div.window.error .title{padding-top:.3em}
+div[data-element="notification"] > div > div.window.progress,div[data-element="notification"] > div > div.window.loading{width:80%;}
+div[data-element="notification"] > div > div.window.progress .icon,div[data-element="notification"] > div > div.window.loading .icon{width:100%}
+div[data-element="notification"] > div > div.window .title{line-height:40px;font-size:1.2em}
+div[data-element="notification"] > div > div.window .content{padding-top:.5em}
+div[data-element="notification"] > div > div.window #circular_container{width:64px;margin:0 auto 0 auto}
 
 .blue{background-color:#2340a1 !important;-webkit-background-image:-webkit-linear-gradient(#2b4fc8,#2340a1) !important;-moz-background-image:-webkit-linear-gradient(#2b4fc8,#2340a1) !important;-ms-background-image:-webkit-linear-gradient(#2b4fc8,#2340a1) !important;-o-background-image:-webkit-linear-gradient(#2b4fc8,#2340a1) !important;background-image:-webkit-linear-gradient(#2b4fc8,#2340a1) !important;-webkit-background-image:-moz-linear-gradient(#2b4fc8,#2340a1) !important;-moz-background-image:-moz-linear-gradient(#2b4fc8,#2340a1) !important;-ms-background-image:-moz-linear-gradient(#2b4fc8,#2340a1) !important;-o-background-image:-moz-linear-gradient(#2b4fc8,#2340a1) !important;background-image:-moz-linear-gradient(#2b4fc8,#2340a1) !important;-webkit-background-image:-ms-linear-gradient(#2b4fc8,#2340a1) !important;-moz-background-image:-ms-linear-gradient(#2b4fc8,#2340a1) !important;-ms-background-image:-ms-linear-gradient(#2b4fc8,#2340a1) !important;-o-background-image:-ms-linear-gradient(#2b4fc8,#2340a1) !important;background-image:-ms-linear-gradient(#2b4fc8,#2340a1) !important;-webkit-background-image:-o-linear-gradient(#2b4fc8,#2340a1) !important;-moz-background-image:-o-linear-gradient(#2b4fc8,#2340a1) !important;-ms-background-image:-o-linear-gradient(#2b4fc8,#2340a1) !important;-o-background-image:-o-linear-gradient(#2b4fc8,#2340a1) !important;background-image:-o-linear-gradient(#2b4fc8,#2340a1) !important;-webkit-background-image:linear-gradient(#2b4fc8,#2340a1) !important;-moz-background-image:linear-gradient(#2b4fc8,#2340a1) !important;-ms-background-image:linear-gradient(#2b4fc8,#2340a1) !important;-o-background-image:linear-gradient(#2b4fc8,#2340a1) !important;background-image:linear-gradient(#2b4fc8,#2340a1) !important}
 .red{background-color:#d10400 !important;-webkit-background-image:-webkit-linear-gradient(#fe0500,#d10400) !important;-moz-background-image:-webkit-linear-gradient(#fe0500,#d10400) !important;-ms-background-image:-webkit-linear-gradient(#fe0500,#d10400) !important;-o-background-image:-webkit-linear-gradient(#fe0500,#d10400) !important;background-image:-webkit-linear-gradient(#fe0500,#d10400) !important;-webkit-background-image:-moz-linear-gradient(#fe0500,#d10400) !important;-moz-background-image:-moz-linear-gradient(#fe0500,#d10400) !important;-ms-background-image:-moz-linear-gradient(#fe0500,#d10400) !important;-o-background-image:-moz-linear-gradient(#fe0500,#d10400) !important;background-image:-moz-linear-gradient(#fe0500,#d10400) !important;-webkit-background-image:-ms-linear-gradient(#fe0500,#d10400) !important;-moz-background-image:-ms-linear-gradient(#fe0500,#d10400) !important;-ms-background-image:-ms-linear-gradient(#fe0500,#d10400) !important;-o-background-image:-ms-linear-gradient(#fe0500,#d10400) !important;background-image:-ms-linear-gradient(#fe0500,#d10400) !important;-webkit-background-image:-o-linear-gradient(#fe0500,#d10400) !important;-moz-background-image:-o-linear-gradient(#fe0500,#d10400) !important;-ms-background-image:-o-linear-gradient(#fe0500,#d10400) !important;-o-background-image:-o-linear-gradient(#fe0500,#d10400) !important;background-image:-o-linear-gradient(#fe0500,#d10400) !important;-webkit-background-image:linear-gradient(#fe0500,#d10400) !important;-moz-background-image:linear-gradient(#fe0500,#d10400) !important;-ms-background-image:linear-gradient(#fe0500,#d10400) !important;-o-background-image:linear-gradient(#fe0500,#d10400) !important;background-image:linear-gradient(#fe0500,#d10400) !important}
