--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -12,7 +12,25 @@ div[data-element="notification"]
   &.show
     display block
 
-  & > div.window
+  & > div
+    margin 0
+    padding 0
+    width 100%
+    height 100%
+
+    display -webkit-box
+    display -ms-box
+    display -moz-box
+    display -o-box
+    display box
+    width 100%
+
+    box-orient vertical
+    box-direction normal
+    box-pack center
+    box-align center
+
+  & > div > div.window
     color rgba(0, 0, 0, 0.8)
     margin-left auto
     margin-right auto
@@ -54,12 +72,17 @@ div[data-element="notification"]
       & > *
         display block
 
+    &:not(.center)
+      box-flex 0
+
     &.center
       text-align center
       padding 1.8em
-      position absolute
-      top 35%
-      left 50%
+      box-flex 1
+      max-height 125px
+      position relative
+      top -10%
+
 
     &.confirm
       max-width 800px
