--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -46,7 +46,7 @@ aside .counter{margin-top:-3px;-webkit-border-radius:2px;-moz-border-radius:2px;
 aside:not(.full){left:-276px;position:absolute;z-index:201;-webkit-transition-duration:150ms;-moz-transition-duration:150ms;-ms-transition-duration:150ms;-o-transition-duration:150ms;transition-duration:150ms;}
 aside:not(.full).show{-webkit-transform:translateX(276px);-moz-transform:translateX(276px);-ms-transform:translateX(276px);-o-transform:translateX(276px);transform:translateX(276px)}
 aside.show{z-index:201 !important}
-aside.full{height:100%;left:0;z-index:50;position:fixed}
+aside.full{height:100%;left:0;z-index:50;position:fixed;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms}
 aside.full.show+ div +section.active{-webkit-transform:translateX(268px);-moz-transform:translateX(268px);-ms-transform:translateX(268px);-o-transform:translateX(268px);transform:translateX(268px)}
 div[data-element="aside_background"]{position:fixed;top:50px;left:0;width:100%;height:100%;z-index:0;background-color:rgba(0,0,0,0);-webkit-transition:background-color 150ms linear;-moz-transition:background-color 150ms linear;-ms-transition:background-color 150ms linear;-o-transition:background-color 150ms linear;transition:background-color 150ms linear;}
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
