Fixed notification in firefox

--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -240,7 +240,7 @@ div[data-element="notification"] > div > div.window.downwards.show{-webkit-trans
 div[data-element="notification"] > div > div.window.left *{display:block;text-align:left}
 div[data-element="notification"] > div > div.window.left > *{display:block}
 div[data-element="notification"] > div > div.window:not(.center){-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0}
-div[data-element="notification"] > div > div.window.center{text-align:center;padding:1.8em;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;max-height:125px;position:relative;top:-10%;}
+div[data-element="notification"] > div > div.window.center{text-align:center;padding:1.8em 1.8em 0 1.8em;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;max-height:175px;position:relative;top:-10%;}
 div[data-element="notification"] > div > div.window.center.progress{display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;-o-box-align:center;box-align:center;}
 div[data-element="notification"] > div > div.window.center.progress *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;width:100%}
 div[data-element="notification"] > div > div.window.center.progress .icon{height:60px !important}
