--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -77,9 +77,9 @@ div[data-element="notification"]
 
     &.center
       text-align center
-      padding 1.8em
+      padding 1.8em 1.8em 0 1.8em
       box-flex 1
-      max-height 125px
+      max-height 175px
       position relative
       top -10%
 
