--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -20,7 +20,6 @@ button, .button
 
   &.smallest
     line-height 2em
-    padding 0 .6em
 
     &>img
       height 1.3em
@@ -66,7 +65,7 @@ button, .button
     &:before
       margin-right .5em
     &:empty:before
-      margin-right 0
+      margin-right -1px
 
   & *:nth-child(2)
     margin-left .5em
@@ -74,14 +73,14 @@ button, .button
   &>img
       width auto
       height 1.8em
-      margin-right .4em
+      margin-right 0
       position relative
       top 6px
 
       &+span
         position relative
         top 0
-        margin-left 0!important
+        margin-left .4em!important
 
 header
   :not(.button)
