--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -41,17 +41,14 @@ small{opacity:.6;font-size:1.1em}
 .hidden{display:none !important}
 [data-visible]:not(.show){display:none}
 
-aside{display:block;width:256px;padding:6px;top:0;bottom:0;}
+aside{display:block;width:256px;padding:6px;top:0;bottom:0;left:-276px;position:absolute;z-index:201;-webkit-transition-duration:150ms;-moz-transition-duration:150ms;-ms-transition-duration:150ms;-o-transition-duration:150ms;transition-duration:150ms;}
 aside .counter{margin-top:-3px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px;padding:.2em .4em .2em .4em;float:right}
-aside:not(.full){left:-276px;position:absolute;z-index:201;-webkit-transition-duration:150ms;-moz-transition-duration:150ms;-ms-transition-duration:150ms;-o-transition-duration:150ms;transition-duration:150ms;}
-aside:not(.full).show{-webkit-transform:translateX(276px);-moz-transform:translateX(276px);-ms-transform:translateX(276px);-o-transform:translateX(276px);transform:translateX(276px)}
+aside.show{-webkit-transform:translateX(276px);-moz-transform:translateX(276px);-ms-transform:translateX(276px);-o-transform:translateX(276px);transform:translateX(276px)}
 aside.show{z-index:201 !important}
-aside.full{height:100%;left:0;z-index:50;position:fixed;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms}
-aside.full.show+ div + section.active{left:268px}
 div[data-element="aside_background"]{position:fixed;top:50px;left:0;width:100%;height:100%;z-index:0;background-color:rgba(0,0,0,0);-webkit-transition:background-color 150ms linear;-moz-transition:background-color 150ms linear;-ms-transition:background-color 150ms linear;-o-transition:background-color 150ms linear;transition:background-color 150ms linear;}
+div[data-element="aside_background"].full{background-color:rgba(0,0,0,0) !important;top:0}
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
 div[data-element="aside_background"].hide{background-color:rgba(0,0,0,0)}
-div[data-element="aside_background"].full{background-color:rgba(0,0,0,0) !important;left:268px;top:0}
 
 section{height:100%;width:100%;position:absolute;margin:0;padding:0;z-index:0;top:0;left:0;bottom:0;opacity:0;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
 section.active{opacity:1;z-index:100}
