--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -1,13 +1,13 @@
 section
   height 100%
   width 100%
-  position absolute
+  // position absolute
   margin 0
   padding 0
   z-index 0
-  top 0
-  left 0
-  bottom 0
+  // top 0
+  // left 0
+  // bottom 0
   opacity 0
 
   transition-duration SECTION_TRANSITION_TIME
