--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -95,6 +95,7 @@ header
     text-decoration none
     text-align center
     background-color rgba(0, 0, 0, 0)
+    background-image none
     height HEADER_HEIGHT - 4
     margin-top 2px
     margin-bottom 2px
