--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -83,6 +83,8 @@ header
       margin-top 4px
 
   & > nav
+    height HEADER_HEIGHT
+    max-height HEADER_HEIGHT
 
     &.right
       position fixed
@@ -105,7 +107,6 @@ header
         font-size 1.2em
         width 100%
         margin HEADER_HEIGHT 0 0 0
-        height HEADER_HEIGHT
         line-height HEADER_HEIGHT
         padding 0
         display -webkit-box
